<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:id="@+id/mainWidgetLinLayout"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/widget_border">

	<RelativeLayout
		android:gravity="center"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:padding="8dp"
			android:textSize="16sp"
			android:typeface="serif"
			android:textColor="#EE0E00"
			android:id="@+id/widgetDateDesc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Date"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:textStyle="bold"/>

	</RelativeLayout>

	<TextView
		android:background="@android:color/white"
		android:layout_width="match_parent"
		android:layout_height="1dp"/>

	<GridLayout
		android:padding="8dp"
		android:layout_gravity="center_horizontal"
		android:orientation="horizontal"
		android:id="@+id/widgetGridView"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:rowCount="2"
		android:columnCount="5">

		<TextView
			android:textSize="12sp"
			android:textColor="#55A027"
			android:layout_gravity="center"
			android:id="@+id/FajrDesc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_column="0"
			android:text="@string/fajr___"
			android:layout_row="0"/>

		<TextView
			android:textSize="12dp"
			android:textStyle="bold"
			android:textColor="#ffffffff"
			android:id="@+id/wFajrTime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="14dp"
			android:layout_marginRight="4dp"
			android:layout_column="0"
			android:text="00:00"
			android:layout_row="1"/>

		<TextView
			android:textSize="12.0sp"
			android:textColor="#55A027"
			android:layout_gravity="center"
			android:id="@+id/DhuhrDesc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_column="1"
			android:text="@string/dhuhr___"
			android:layout_row="0"/>

		<TextView
			android:textSize="12dp"
			android:textStyle="bold"
			android:textColor="#ffffffff"
			android:id="@+id/wDhuhrTime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_column="1"
			android:text="00:00"
			android:layout_row="1"/>

		<TextView
			android:textSize="12sp"
			android:textColor="#55A027"
			android:layout_gravity="center"
			android:id="@+id/AsrDesc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_column="2"
			android:text="@string/asr____"
			android:layout_row="0"/>

		<TextView
			android:textSize="12sp"
			android:textStyle="bold"
			android:textColor="#ffffffff"
			android:id="@+id/wAsrTime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_column="2"
			android:text="00:00"
			android:layout_row="1"/>

		<TextView
			android:textSize="12sp"
			android:textColor="#55A027"
			android:id="@+id/MaghribDesc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_column="3"
			android:text="@string/maghrib"
			android:layout_row="0"/>

		<TextView
			android:textSize="12sp"
			android:textColor="#55A027"

			android:layout_gravity="center_horizontal"
			android:id="@+id/IshaDesc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_column="4"
			android:text="@string/isha_____"
			android:layout_row="0"/>

		<TextView
			android:textSize="12dp"
			android:textStyle="bold"
			android:textColor="#ffffffff"
			android:layout_gravity="center"
			android:id="@+id/wMaghribTime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:layout_column="3"
			android:text="00:00"
			android:layout_row="1"/>

		<TextView
			android:textSize="12dp"
			android:textStyle="bold"
			android:textColor="#ffffffff"
			android:layout_gravity="center_horizontal"
			android:id="@+id/wIshaTime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_column="4"
			android:text="00:00"
			android:layout_row="1"/>

	</GridLayout>

</LinearLayout>
